--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ Main background - #D4A76A*/
     width: 100%;
     left: 0;
     top: 0;
+    border-bottom: solid black 2px;
 }
 .page-name {
     line-height: 45px;
@@ -44,4 +45,43 @@ nav {
     margin-right: 20px;
     font-size: 20px;
     border: none;
+}
+body {
+    background-color: #D4A76A;
+}
+.flights {
+    background-color: white;
+    position: absolute;
+    top: 200px;
+    left: 100px;
+    width: 350px;
+    height: 200px;
+    box-shadow: 0 0 10px #000;
+}
+.group-trips {
+    background-color: white;
+    position: absolute;
+    top: 200px;
+    left: 550px;
+    width: 350px;
+    height: 200px;
+    box-shadow: 0 0 10px #000;
+}
+.discount-flights {
+    background-color: white;
+    position: absolute;
+    top: 200px;
+    left: 1000px;
+    width: 350px;
+    height: 200px;
+    box-shadow: 0 0 10px #000;
+}
+.about-us {
+    background-color: white;
+    position: absolute;
+    top: 450px;
+    left: 50px;
+    width: 1350px;
+    height: 200px;
+    box-shadow: 0 0 10px #000;
 }
